--- a/ai-zoo-discord-bots/config/env.example
+++ b/ai-zoo-discord-bots/config/env.example
@@ -16,6 +16,9 @@ ANTHROPIC_API_KEY=your_anthropic_api_key_here
 NOTION_API_KEY=your_notion_api_key_here
 NOTION_DATABASE_ID=your_notion_database_id_here
 
+# Database Configuration
+DATABASE_URL=sqlite+aiosqlite:///data/llm_requests.db
+
 # Bot Configuration
 MAX_CONVERSATION_TURNS=10  # Maximum number of turns in a conversation before cooling down
 MIN_RESPONSE_DELAY=5       # Minimum delay in seconds before responding
