--- a/ai-zoo-discord-bots/docker/Dockerfile
+++ b/ai-zoo-discord-bots/docker/Dockerfile
@@ -13,6 +13,30 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     cron \
     tzdata \
+    # Playwright/Chromium dependencies
+    libglib2.0-0 \
+    libnss3 \
+    libnspr4 \
+    libatk1.0-0 \
+    libatk-bridge2.0-0 \
+    libcups2 \
+    libdrm2 \
+    libdbus-1-3 \
+    libxcb1 \
+    libxkbcommon0 \
+    libx11-6 \
+    libxcomposite1 \
+    libxdamage1 \
+    libxext6 \
+    libxfixes3 \
+    libxrandr2 \
+    libgbm1 \
+    libpango-1.0-0 \
+    libcairo2 \
+    libasound2 \
+    libatspi2.0-0 \
+    libxshmfence1 \
+    fonts-liberation \
     && rm -rf /var/lib/apt/lists/*
 
 # Set timezone
@@ -24,6 +48,9 @@ COPY requirements.txt .
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Install Playwright browser (Chromium) for headless browsing
+RUN playwright install chromium --with-deps
 
 # Copy project files
 COPY . .
