--- a/ai-zoo-discord-bots/requirements.txt
+++ b/ai-zoo-discord-bots/requirements.txt
@@ -38,3 +38,6 @@ alembic>=1.13.0   # For database migrations
 
 # For dynamic content scraping (JavaScript-heavy websites)
 playwright>=1.40.0
+
+# For numerical computations (utility functions)
+numpy>=1.24.0
